# boxbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: architecture.md  demo.tape
src/: main.rs  message.rs
src/source/: archive.rs  live.rs  mod.rs  replay.rs  schedule.rs  stream.rs
src/state/: merge.rs  mod.rs  view.rs
src/ui/: focus.rs  header.rs  map.rs  mod.rs  racecontrol.rs  tower.rs
