[package]
name = "boxbox"
version = "0.1.0"
edition = "2024"
description = "F1 live timing in your terminal — the pit wall timing screen as a TUI"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
flate2 = "1"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[profile.release]
lto = true
strip = true
